src/Arit/AnalizadorJCC/GramaticaJCC.java
/* Generated By:JavaCC: Do not edit this line. GramaticaJCC.java */
package Arit.AnalizadorJCC;
import Arit.AltaAbstraccion.*;
import Arit.CambioFlujo.*;
import Arit.Ciclos.*;
import Arit.ControlDeFlujo.*;
import Arit.Entorno.*;
import Arit.OperacionersPrimitivas.*;
import Arit.ValorImplicito.*;
import Error.ErrorAr;
import Informacion.Informacion;

import java.util.LinkedList;

public class GramaticaJCC implements GramaticaJCCConstants {

    public void error_skipto(int kind) {
        ParseException e = generateParseException();  // generate the exception object.
        System.out.println(e.toString());  // print the error message
        Token t;
        //Informacion.agregarError( new ErrorAr("Sintactico", "No se esperaba '" + n +"'", fila,  columna ));
        do {
          t = getNextToken();
        } while (t.kind != kind);
    }

  final public LinkedList<NodoAst> Inicio() throws ParseException {
    LinkedList<NodoAst> Ast = new LinkedList<NodoAst>();
    Ast = Campos();
    jj_consume_token(0);
                           {if (true) return Ast;}
    throw new Error("Missing return statement in function");
  }

  final public LinkedList<NodoAst> Campos() throws ParseException {
    NodoAst ins;
    LinkedList<NodoAst> lista = new LinkedList<NodoAst>();
    label_1:
    while (true) {
      ins = Campo();
                      lista.add(ins);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SI:
      case SWITCH:
      case WHILE:
      case BREAK:
      case CONTINUE:
      case RETURN:
      case DO:
      case FOR:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
      {if (true) return lista;}
    throw new Error("Missing return statement in function");
  }

  final public NodoAst Campo() throws ParseException {
    NodoAst sen;
    try {
      if (jj_2_1(5)) {
        sen = DeclararFuncion();
                                                         {if (true) return sen;}
      } else if (jj_2_2(3)) {
        sen = Declaracion();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PTCOMA:
          jj_consume_token(PTCOMA);
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
                                                             {if (true) return sen;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SI:
          sen = Si();
                                              {if (true) return sen;}
          break;
        case SWITCH:
          sen = Seleccionar();
                                              {if (true) return sen;}
          break;
        case WHILE:
          sen = While();
                                              {if (true) return sen;}
          break;
        case DO:
          sen = DoWhile();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PTCOMA:
            jj_consume_token(PTCOMA);
            break;
          default:
            jj_la1[2] = jj_gen;
            ;
          }
                                              {if (true) return sen;}
          break;
        case FOR:
          sen = For();
                                              {if (true) return sen;}
          break;
        case BREAK:
          sen = Break();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PTCOMA:
            jj_consume_token(PTCOMA);
            break;
          default:
            jj_la1[3] = jj_gen;
            ;
          }
                                              {if (true) return sen;}
          break;
        case CONTINUE:
          sen = Continue();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PTCOMA:
            jj_consume_token(PTCOMA);
            break;
          default:
            jj_la1[4] = jj_gen;
            ;
          }
                                              {if (true) return sen;}
          break;
        case RETURN:
          sen = Return();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PTCOMA:
            jj_consume_token(PTCOMA);
            break;
          default:
            jj_la1[5] = jj_gen;
            ;
          }
                                              {if (true) return sen;}
          break;
        default:
          jj_la1[8] = jj_gen;
          if (jj_2_3(3)) {
            sen = Llamada();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case PTCOMA:
              jj_consume_token(PTCOMA);
              break;
            default:
              jj_la1[6] = jj_gen;
              ;
            }
                                                            {if (true) return sen;}
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IDENTIFICADOR:
              sen = AsignarEstructura();
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case PTCOMA:
                jj_consume_token(PTCOMA);
                break;
              default:
                jj_la1[7] = jj_gen;
                ;
              }
                                                      {if (true) return sen;}
              break;
            default:
              jj_la1[9] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    } catch (ParseException e) {
            Informacion.agregarError( new ErrorAr("Sintactico", e.getMessage(),  e.currentToken.beginLine, e.currentToken.beginColumn ));
            Token t;
            System.out.println(e.toString());
            do {
                t = getNextToken();
            } while (t.kind != PTCOMA && t!=null && t.kind != EOF );
            {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  final public NodoAst DeclararFuncion() throws ParseException {
    Token t;
    LinkedList<Parametro> parametros =  new LinkedList<Parametro>();
    LinkedList<NodoAst> sentencias;
    if (jj_2_4(3)) {
      t = jj_consume_token(IDENTIFICADOR);
      jj_consume_token(IGUAL);
      jj_consume_token(FUNCTION);
      jj_consume_token(PARA);
      parametros = Parametros();
      jj_consume_token(PARC);
      jj_consume_token(LLAVEA);
      sentencias = Sentencias();
      jj_consume_token(LLAVEC);
      {if (true) return new Funcion(t.image, parametros, sentencias, token.beginLine, token.beginColumn);}
    } else if (jj_2_5(3)) {
      t = jj_consume_token(IDENTIFICADOR);
      jj_consume_token(IGUAL);
      jj_consume_token(PARA);
      parametros = Parametros();
      jj_consume_token(PARC);
      jj_consume_token(FLECHA);
      jj_consume_token(LLAVEA);
      sentencias = Sentencias();
      jj_consume_token(LLAVEC);
      {if (true) return new Funcion(t.image, parametros, sentencias, token.beginLine, token.beginColumn);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LinkedList<Parametro> Parametros() throws ParseException {
    LinkedList<Parametro> parametros =  new LinkedList<Parametro>();
    Parametro par;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
      par = Parametro();
                         parametros.add(par);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMA:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMA);
        par = Parametro();
                                                                             parametros.add(par);
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
      {if (true) return parametros;}
    throw new Error("Missing return statement in function");
  }

  final public Parametro Parametro() throws ParseException {
    Token t;
    Expresion def = null;
    t = jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IGUAL:
      jj_consume_token(IGUAL);
      def = Expresion();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
      {if (true) return new Parametro(t.image, def);}
    throw new Error("Missing return statement in function");
  }

  final public LinkedList<NodoAst> Sentencias() throws ParseException {
    LinkedList<NodoAst> sentencias = new LinkedList<NodoAst>();
    NodoAst sentencia;
    label_3:
    while (true) {
      sentencia = Sentencia();
                                sentencias.add(sentencia);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SI:
      case SWITCH:
      case WHILE:
      case BREAK:
      case CONTINUE:
      case RETURN:
      case DO:
      case FOR:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_3;
      }
    }
      {if (true) return sentencias;}
    throw new Error("Missing return statement in function");
  }

  final public NodoAst Sentencia() throws ParseException {
    NodoAst sen;
    try {
      if (jj_2_6(3)) {
        sen = Declaracion();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PTCOMA:
          jj_consume_token(PTCOMA);
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
                                                      {if (true) return sen;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SI:
          sen = Si();
                                                      {if (true) return sen;}
          break;
        case SWITCH:
          sen = Seleccionar();
                                                      {if (true) return sen;}
          break;
        case WHILE:
          sen = While();
                                                      {if (true) return sen;}
          break;
        case DO:
          sen = DoWhile();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PTCOMA:
            jj_consume_token(PTCOMA);
            break;
          default:
            jj_la1[15] = jj_gen;
            ;
          }
                                                      {if (true) return sen;}
          break;
        case FOR:
          sen = For();
                                                      {if (true) return sen;}
          break;
        case BREAK:
          sen = Break();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PTCOMA:
            jj_consume_token(PTCOMA);
            break;
          default:
            jj_la1[16] = jj_gen;
            ;
          }
                                                      {if (true) return sen;}
          break;
        case CONTINUE:
          sen = Continue();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PTCOMA:
            jj_consume_token(PTCOMA);
            break;
          default:
            jj_la1[17] = jj_gen;
            ;
          }
                                                      {if (true) return sen;}
          break;
        case RETURN:
          sen = Return();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PTCOMA:
            jj_consume_token(PTCOMA);
            break;
          default:
            jj_la1[18] = jj_gen;
            ;
          }
                                                      {if (true) return sen;}
          break;
        default:
          jj_la1[21] = jj_gen;
          if (jj_2_7(3)) {
            sen = Llamada();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case PTCOMA:
              jj_consume_token(PTCOMA);
              break;
            default:
              jj_la1[19] = jj_gen;
              ;
            }
                                                                   {if (true) return sen;}
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IDENTIFICADOR:
              sen = AsignarEstructura();
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case PTCOMA:
                jj_consume_token(PTCOMA);
                break;
              default:
                jj_la1[20] = jj_gen;
                ;
              }
                                                      {if (true) return sen;}
              break;
            default:
              jj_la1[22] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    } catch (ParseException e) {
        Token t;
        Informacion.agregarError( new ErrorAr("Sintactico", e.getMessage(),  e.currentToken.beginLine, e.currentToken.beginColumn ));
        System.out.println(e.toString());
        do {
            t = getNextToken();
        } while (t.kind != PTCOMA && t!=null && t.kind != EOF );
        {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  final public NodoAst Declaracion() throws ParseException {
    NodoAst ins;
    Expresion e;
    Token t;
    t = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(IGUAL);
    e = Expresion();
                                                          ins =  new DeclaracionAsignacion(t.image, e, token.beginLine, token.beginColumn);
      {if (true) return ins;}
    throw new Error("Missing return statement in function");
  }

  final public NodoAst Si() throws ParseException {
    Expresion cond;
    LinkedList<NodoAst> sentencias;
    NodoAst ifElse;
    LinkedList<NodoAst> sentenciasElse = null;
    jj_consume_token(SI);
    jj_consume_token(PARA);
    cond = Expresion();
    jj_consume_token(PARC);
    jj_consume_token(LLAVEA);
    sentencias = Sentencias();
    jj_consume_token(LLAVEC);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SINO:
      if (jj_2_8(2)) {
        jj_consume_token(SINO);
        ifElse = Si();
                                                         sentenciasElse = new LinkedList<NodoAst>(); sentenciasElse.add(ifElse);
      } else if (jj_2_9(2)) {
        jj_consume_token(SINO);
        jj_consume_token(LLAVEA);
        sentenciasElse = Sentencias();
        jj_consume_token(LLAVEC);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
      {if (true) return new Si(cond, sentencias, sentenciasElse, token.beginLine, token.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public NodoAst Seleccionar() throws ParseException {
    Expresion cond;
    LinkedList<Caso> casos;
    Caso defecto = null;
    LinkedList<NodoAst> sentenciasDefault = null;
    jj_consume_token(SWITCH);
    jj_consume_token(PARA);
    cond = Expresion();
    jj_consume_token(PARC);
    jj_consume_token(LLAVEA);
    casos = Casos();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DEFECTO:
      jj_consume_token(DEFECTO);
      jj_consume_token(DOSPUNTOS);
      sentenciasDefault = Sentencias();
                                                               defecto = new Caso(null, sentenciasDefault);
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(LLAVEC);
      {if (true) return new Seleccionar(cond, casos, defecto, token.beginLine, token.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public LinkedList<Caso> Casos() throws ParseException {
    Expresion cond;
    LinkedList<Caso> casos = new LinkedList<Caso>();
    LinkedList<NodoAst> sentencias;
    label_4:
    while (true) {
      jj_consume_token(CASE);
      cond = Expresion();
      jj_consume_token(DOSPUNTOS);
      sentencias = Sentencias();
                                                                        casos.add(new Caso(cond, sentencias));
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CASE:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_4;
      }
    }
      {if (true) return casos;}
    throw new Error("Missing return statement in function");
  }

  final public NodoAst While() throws ParseException {
    Expresion condicion;
    LinkedList<NodoAst> sentencias;
    jj_consume_token(WHILE);
    jj_consume_token(PARA);
    condicion = Expresion();
    jj_consume_token(PARC);
    jj_consume_token(LLAVEA);
    sentencias = Sentencias();
    jj_consume_token(LLAVEC);
      {if (true) return new While(condicion, sentencias, token.beginLine, token.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public NodoAst DoWhile() throws ParseException {
    Expresion condicion;
    LinkedList<NodoAst> sentencias;
    jj_consume_token(DO);
    jj_consume_token(LLAVEA);
    sentencias = Sentencias();
    jj_consume_token(LLAVEC);
    jj_consume_token(WHILE);
    jj_consume_token(PARA);
    condicion = Expresion();
    jj_consume_token(PARC);
      {if (true) return new DoWhile(condicion, sentencias, token.beginLine, token.beginColumn);}
    throw new Error("Missing return statement in function");
  }
